--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP24-1.png');"></div>
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP25-1.png');"></div>
           <div class="text">
             <!-- <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
             <h5><span class="badge bg-success text-white">Up next</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 24: Should Bengaluru be split?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 July 2023 <span class="sep">/</span> 01:01:58</small></span></div>
-            <p class="mb-4">In this episode Ravichandar V of the Bengaluru Restructuring Committee discusses the costs and benefits of splitting the city into many parts. How the Bengaluru governance bill and the many strategies can deliver outcomes for citizens in the city.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 25: Indian cyclist in the Tour de France?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 29 July 2023 <span class="sep">/</span> 54:00</small></span></div>
+            <p class="mb-4">Venkateshwara Rao Navanasi or Bikey Venky founder of Bengaluru Amatuer Racing, Curator of the working athelete podcast and a well known cyclist in the country's amatuer circuitl for more than a decade speaks about what it takes to get an Indian into the pro peleton.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -284,6 +284,25 @@
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP24-1.png');"></div>
+          <div class="text">
+            <h3 class="font-weight-light"><a href="#">Episode 24: Should Bengaluru be split?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 July 2023 <span class="sep">/</span> 01:01:08</small></span></div>
+            <p class="mb-4">One city or many cities? Or is it both? What will it achieve? In this episode, V Ravichandar, member of the Bengaluru Restructuring committee, demystifies the proposal to split Bengaluru, the Greater Bengaluru Authority being created and the Bengaluru Governance Bill being drafted to give wings to this. Listen in.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Should-Bengaluru-be-split---OoruLabs-Talking-Heads-podcast-Episode-24-e277ok7" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="https://youtu.be/EmqquGZQx1s" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="https://open.spotify.com/episode/3V5FtvH9vOVx8fTaIEH5lQ?si=7d496d0a02c94bac" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000621954575" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
