--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/vinayakbharne.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Vinayak Bharne</h3>
+              <p>A Presidential Fellow of USC Marshall School of Business. Faculty, USC School of Architecture, Price School of Public Policy, East Asian Studies Center, US-China Institute, among others</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/zenrainman.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -270,9 +280,27 @@
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP26-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 26: How do we achieve liveability in cities?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 5 Aug 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Professor Vinayak Bharne of the University of Southern California highlights the pathways for Asian cities to achieve livability from the two decades of studying and working with various cities across the globe. He also throws light on some of the issues plaguing North American cities from his lived experience of the country.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP25-1.png');"></div>
           <div class="text">
-            <!-- <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
             <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 25: Indian cyclist in the Tour de France?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 29 July 2023 <span class="sep">/</span> 54:00</small></span></div>
