--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP26-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+<!--            <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 26: How do we achieve liveability in cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 5 Aug 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Professor Vinayak Bharne of the University of Southern California highlights the pathways for Asian cities to achieve livability from the two decades of studying and working with various cities across the globe. He also throws light on some of the issues plaguing North American cities from his lived experience of the country.</p>
@@ -301,17 +302,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP25-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 25: Indian cyclist in the Tour de France?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 29 July 2023 <span class="sep">/</span> 51:32</small></span></div>
             <p class="mb-4">Venkateshwara Rao Navanasi or Bikey Venky founder of Bengaluru Amatuer Racing, Curator of the working athelete podcast and a well known cyclist in the country's amatuer circuitl for more than a decade speaks about what it takes to get an Indian into the pro peleton.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Indian-cyclist-in-Tour-de-France---OoruLabs-Talking-Heads-podcast-Episode-25-e27gi35" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/RVLLWgHC2Wg" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/7lKv7nbijO9pJZLyT2FSXP?si=2bcddc3ad2be470f" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000622719522" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
