--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP27-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 27: What makes cities?</a></h3>
+            <h3 class="font-weight-light"><a href="#">Episode 27: Why we build our cities wrong?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 Aug 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Naresh Narasimhan talks about cities, design, people, identity and branding.</p>
             <h5 class="mb-1">Also on</h5>
