--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 27: Why we build our cities wrong?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 Aug 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">Naresh Narasimhan talks about cities, design, people, identity and branding.</p>
+            <p class="mb-4">Naresh Narasimhan talks about waterways, streets, design, people, identity and branding.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
