--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
             <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 26: How do we achieve liveability in cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 5 Aug 2023 <span class="sep">/</span> 01:20:24</small></span></div>
-            <p class="mb-4">Professor Vinayak Bharne of the University of Southern California highlights the pathways for Asian cities to achieve livability from the two decades of studying and working with various cities across the globe. He also throws light on some of the issues plaguing North American cities from his lived experience of the country.</p>
+            <p class="mb-4">In an amazingly insightful conversation, Vinayak Bharne dives deep into the complex structures that underpin the definition of a liveable city. From cultural, informal nature of the cities to the role real estate developers and structural policies at play, we wrangle with the line we need to draw between these extremes.
+            <br><i>“The answer dear friend is blowing in the wind.” - Bob Dylan</i></p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-do-we-achieve-liveability-in-cities---OoruLabs-Talking-Heads-podcast-Episode-26-e27orh0" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
