--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP27-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
+            <!--<h5><span class="badge bg-warning">Coming Soon</span></h5>-->
             <h3 class="font-weight-light"><a href="#">Episode 27: Why we build our cities wrong?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 Aug 2023 <span class="sep">/</span> 01:01:10</small></span></div>
             <p class="mb-4">With breathtaking drone visuals Naresh Narasimhan talks about what building world class waterways and streets teach us about history, community engagement, government capacity, measuring outcomes, identity and branding of a city.</p>
@@ -311,7 +312,6 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP26-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 26: How do we achieve liveability in cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 5 Aug 2023 <span class="sep">/</span> 01:20:24</small></span></div>
             <p class="mb-4">In an amazingly insightful conversation, Vinayak Bharne dives deep into the complex structures that underpin the definition of a liveable city. From cultural, informal nature of the cities to the role real estate developers and structural policies at play, we wrangle with the line we need to draw between these extremes.
@@ -319,11 +319,11 @@
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-do-we-achieve-liveability-in-cities---OoruLabs-Talking-Heads-podcast-Episode-26-e27orh0" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/DK0vy1cGviE" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/1ame37tOALda3oG0lPrxxc?si=5b875e2506464d26" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000623495145" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
