--- a/about.html
+++ b/about.html
@@ -95,6 +95,16 @@
           </div>
           <div class="col-md-6 col-lg-6 text-center mb-5" data-aos="fade-up">
             <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
+            <h2 class="text-black font-weight-light mb-4">Sonal Kulkarni</h2>
+            <p class="font-weight-light small" style="text-align: justify;">Sonal has a Bachelors in Architecture and Masters in Policy & Urban planning from University of Southern California. Over the past 10 years she has worked extensively in the government on infrastructure for sustainable mobility. She architected, designed, coordinated and executed the <a href="https://smartnet.niua.org/indiacyclechallenge/cities/bengaluru/" class="text-decoration-none" target="_blank">Smart Cities Mission's award winning</a> cycling infrastructure in Bengaluru. She has architected and designed bicycle sharing system in Bengaluru. She has conducted feasibility, designed and executeed pilot interventions of slow streets. She has been a part of many community outreach programs like the longest running Open streets campaign in the country, <a href="https://www.facebook.com/blrcycleday" class="text-decoration-none" target="_blank">Cycle Day</a>. She has played a key role in bringing to the city UMI award winning <a href="https://www.facebook.com/churchstreetfirst" class="text-decoration-none" target="_blank">Church Street First</a>, a fully pedestrianised street in the CBD of Bengaluru. Her passion for sustainability has made her step back into the government for a while. She currently serves as the Chief Research and Innovation Officer at the Directorate of Urban Land Transport.</p>
+            <p>
+              <a href="https://www.facebook.com/sonal.kulkarni" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+              <a href="https://www.instagram.com/sonalkulkarni/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/sonalkulkarni/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-6 text-center mb-5" data-aos="fade-up">
+            <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
             <h2 class="text-black font-weight-light mb-4">Knerav Kodolikar</h2>
             <p style="text-align: justify;">Knerav has a Bachelors in Economics from Christ University, Bengaluru. He conceptualises and builds economic incentives for sustainablity projects at Urban Morph. He is also technology developer building the <a href="https://altmo.app" class="text-decoration-none" target="_blank">AltMo</a> platform. AltMo is the official platform for the Ministry of Housing and Urban Affairs, Smart City Mission's, Cycle2Work and Freedom2WalkCycleRun challenge. He rides for Equipe Goa amatuer racing team and at the National Championships.</p>
             <p>
