--- a/index.html
+++ b/index.html
@@ -290,13 +290,12 @@
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP27-1.png');"></div>
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP29-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
-            <!--<h5><span class="badge bg-warning">Coming Soon</span></h5>-->
-            <h3 class="font-weight-light"><a href="#">Episode 27: Why we build our cities wrong?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 Aug 2023 <span class="sep">/</span> 58:26</small></span></div>
-            <p class="mb-4">With breathtaking drone visuals Naresh Narasimhan talks about what building world class waterways and streets teach us about history, community engagement, government capacity, measuring outcomes, identity and branding of a city.</p>
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 29: Is the newspaper dead?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 26 Aug 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Rasheed Kappan a journalist talks us through the changing landscape of media and the city.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -304,6 +303,44 @@
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP28-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 28: Are our urban citizens healthy?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 19 Aug 2023 <span class="sep">/</span> 50:00</small></span></div>
+            <p class="mb-4">Shama Karkal unpacks how we think about health and its linkages to how we live in our cities.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP27-1.png');"></div>
+          <div class="text">
+            <h3 class="font-weight-light"><a href="#">Episode 27: Why we build our cities wrong?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 Aug 2023 <span class="sep">/</span> 58:26</small></span></div>
+            <p class="mb-4">With breathtaking drone visuals Naresh Narasimhan talks about what building world class waterways and streets teach us about history, community engagement, government capacity, measuring outcomes, identity and branding of a city.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Are-we-designing-the-cities-wrong---OoruLabs-Talking-Heads-podcast-Episode-27-e2812du" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="https://youtu.be/tv-A1i9DKuc" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="https://open.spotify.com/episode/0dyQw3axQ0YVHX8GfqH1qd?si=88fe296913574c0a" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000624212755" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
