--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP29-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <!-- <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 29: Is the newspaper dead?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 26 Aug 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Rasheed Kappan a journalist talks us through the changing landscape of media and the city.</p>
@@ -311,15 +312,15 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP28-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 28: Are our urban citizens healthy?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 19 Aug 2023 <span class="sep">/</span> 49:06</small></span></div>
-            <p class="mb-4">Shama Karkal unpacks how we think about health and its linkages to how we live in our cities.</p>
+            <p class="mb-4">Shama Karkal unpacks healthy cities. Why how we build our cities and how we live matters greatly to our individual and collective health. Why we are not measuring enough, how our departments coordinating better will make us healthier, how nutrition and movement will reduce our chances of becoming a basket case, how some people in the city are healthier because they are wealthier.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Are-our-urban-citizens-healthy---OoruLabs-Talking-Heads-podcast-Episode-28-e2896bk" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/xj1rWIBK25U" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/0JM4xSNmlCzS0o2vTTRgTr?si=6eb61faab02841f8" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
