--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <span class="icon-youtube"></span></a>
               <a href="https://open.spotify.com/episode/0JM4xSNmlCzS0o2vTTRgTr?si=6eb61faab02841f8" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
