--- a/index.html
+++ b/index.html
@@ -186,6 +186,16 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/srikanthvishwanathan.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Srikanth Vishwanathan</h3>
+              <p>As CEO of Janaagraha, his focus area in the urban sector has been “city-systems” reforms spanning flagship report the Annual Survey of India’s City-Systems (ASICS) and municipal finance reforms.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/zenrainman.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -288,7 +298,46 @@
             <h2 class="font-weight-bold text-black">Podcast Library</h2>
           </div>
         </div>
+
+        <!-- <div class="d-block d-md-flex podcast-entry bg-warning mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/support the pod-1.png');"></div>
+          <div class="text">
+            <h5 class="btn bg-primary text-white" style="white-space: normal !important; word-wrap: break-word;">This podcast is supported by "your organisation name"</h5>
+            <h3 class="font-weight-light"><a href="#">Episode 00: Podcast title</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Advertisement <span class="sep">/</span> 01 January 20xx <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">If you are a corporate you can support this podcast with a donation. We only do 50 podcasts each year. Your podcast entry on the site will get a red badge mention above the title and a supported by mention on the podcast and social media. The proceeds will go to a not for profit working to improve civic participation in neighbourhoods. A part of the funds will be used to make this podcast better for listeners. We have 80G so you can get tax exempt on the donation. We only accept donations in INR. <a href="mailto:oorulabs@gmail.com">Write to us</a> if you are interested.</p>
+            <h5 class="mb-1">This podcast is distributed on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div> -->
+
         
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP32.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 32: Where is the money in our cities going?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Srikanth Vishwanathan unpacks city finances. Why is infrastructure in our cities failing? Are cities mismanaging the finances? Are they unable to tap the right sources of funding? What is the impact of a dysfunctional city finance corporation? What are the reforms in municipal finances?</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP31.png');"></div>
           <div class="text">
@@ -326,6 +375,7 @@
             </div>
           </div>
         </div>
+
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP29-1.png');"></div>
@@ -679,25 +729,6 @@
               <a href="https://open.spotify.com/episode/46OIt0rpsMx9rEX6NKu3F8?si=1dbd98894d6442e7" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000611092632" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-podcast"></span></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="d-block d-md-flex podcast-entry bg-warning mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/support the pod-1.png');"></div>
-          <div class="text">
-            <h5 class="btn bg-primary text-white" style="white-space: normal !important; word-wrap: break-word;">This podcast is supported by "your organisation name"</h5>
-            <h3 class="font-weight-light"><a href="#">Episode 00: Podcast title</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Advertisement <span class="sep">/</span> 01 January 20xx <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">If you are a corporate you can support this podcast with a donation. We only do 50 podcasts each year. Your podcast entry on the site will get a red badge mention above the title and a supported by mention on the podcast and social media. The proceeds will go to a not for profit working to improve civic participation in neighbourhoods. A part of the funds will be used to make this podcast better for listeners. We have 80G so you can get tax exempt on the donation. We only accept donations in INR. <a href="mailto:oorulabs@gmail.com">Write to us</a> if you are interested.</p>
-            <h5 class="mb-1">Also on</h5>
-            <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
