--- a/index.html
+++ b/index.html
@@ -318,6 +318,24 @@
           </div>
         </div> -->
 
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP33.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 33: Can cities fix the jobs shortage?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">18 million people turn 18 each year in India and we have over a 100 million people surplus in agriculture. Unless we create 20 million new jobs each year, India’s dream of a demographic dividend could easily turn into a nightmare! Listen to Sridha Krishna Senior Scholar at Takshashila Institution as we tackle the role of cities in surmounting this problem.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP32.png');"></div>
