--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP30.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 30: Is there a remedy for citizen complaints?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 2 Sep 2023 <span class="sep">/</span> 1:00:00</small></span></div>
             <p class="mb-4">Suryaprakash from Daksh Legal puts on a systems thinking hat to help us navigate the problems in judicial and non-judicial remedial landscape for civic apathy.</p>
@@ -398,17 +398,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP29-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 29: Is the newspaper dead?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 26 Aug 2023 <span class="sep">/</span> 48:25</small></span></div>
-            <p class="mb-4">Rasheed Kappan a journalist talks us through the changing landscape of media and the city.</p>
+            <p class="mb-4">Rasheed Kappan a journalist talks us through the changing landscape of media and the city. Listen in to see how many years he gives the newspaper to survive and what will take its place in urban readership.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-the-newspaper-dead---OoruLabs-Talking-Heads-podcast-Episode-29-e28hq6r" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/XLKKTs9tCZk" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/4b8zUv9b1VgLQvwr78HWoV?si=669572e0785247a7" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000625735715" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
