--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           <div class="text">
             <h3 class="font-weight-light"><a href="#">Episode 29: Is the newspaper dead?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 26 Aug 2023 <span class="sep">/</span> 48:25</small></span></div>
-            <p class="mb-4">Rasheed Kappan a journalist talks us through the changing landscape of media and the city. Listen in to see how many years he gives the newspaper to survive and what will take its place in urban readership.</p>
+            <p class="mb-4">Rasheed Kappan a journalist with 3 decades of experience in print and digital media, talks us through the changing landscape of media and the city. Listen in to see how many years he gives the newspaper to survive and what will take its place in urban readership.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-the-newspaper-dead---OoruLabs-Talking-Heads-podcast-Episode-29-e28hq6r" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
