--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP31.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 31: Why are our cities dirty?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 9 Sep 2023 <span class="sep">/</span> 1:00:00</small></span></div>
             <p class="mb-4">Sandhya Narayanan of Solid Waste Management Round Table unpacks the biggest problem plauging our cities today: Trash, Litter, Waste. She lays blame squarely where it belong while walking us through the tremendous progress made over the past decade.</p>
@@ -397,10 +397,10 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP30.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 30: Is there a remedy for citizen complaints?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 2 Sep 2023 <span class="sep">/</span> 55:31</small></span></div>
             <p class="mb-4">Suryaprakash from Daksh Legal puts on a systems thinking hat to help us navigate the problems in judicial and non-judicial remedial landscape for civic apathy and low trust in our society. In a freewheeling discussion we look our ability to seek relief in the current political, bureaucratic and judicial system and our ability to seek relief in the appropriate forum. Wether its incomplete flyovers or concepts like tunnel roads or just bad footpath and roads, is there a way out to get proper services from the government?</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-there-remedy-for-citizen-complaints---OoruLabs-Talking-Heads-podcast-Episode-30-e28qo08" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
