--- a/index.html
+++ b/index.html
@@ -216,6 +216,16 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/pawanmulukutla.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Pawan Mulukutla</h3>
+              <p>Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, has over two decades of professional experience working at the intersection of urban mobility, energy and environment. </p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/shreyagadepalli.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -319,11 +329,11 @@
         </div> -->
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP34.png');"></div>
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP35.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 34: Does citizen journalism have a future?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 30 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <h3 class="font-weight-light"><a href="#">Episode 35: Does citizen journalism have a future?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Meera K runs Citizen Matters an online portal that aggregates citizen stories. With her experience in civic activism, open data and trying to get people to contribute to civic affairs, she unravels how we have changed as a society in talking about our urban issues.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -337,6 +347,25 @@
           </div>
         </div>
         
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP34.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 34: Is india ready for clean transportation?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 30 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, talks about the country's readiness to make the transition fo clean fuels. While there is a market momentum in electric mobility, we need to dig deep as clean energy needs are only going to increase.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP33.png');"></div>
           <div class="text">
