--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 34: Is india ready for clean transportation?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 30 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, talks about the country's readiness to make the transition fo clean fuels. While there is a market momentum in electric mobility, we need to dig deep as clean energy needs are only going to increase.</p>
+            <p class="mb-4">Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, talks about the country's readiness to make the transition to clean fuels. While there is a market momentum in electric mobility, there are challenges as well. We explore the industry and product readiness in hydrogen and biofuels as well. </p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -372,7 +372,7 @@
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 33: Can cities fix the jobs shortage?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">18 million people turn 18 each year in India and we have over a 100 million people surplus in agriculture. Unless we create 20 million new jobs each year, India’s dream of a demographic dividend could easily turn into a nightmare! Listen to Sridha Krishna Senior Scholar at Takshashila Institution as we tackle the role of cities in surmounting this problem.</p>
+            <p class="mb-4">18 million people turn 18 each year in India and we have over a 100 million people surplus in agriculture. Unless we create 20 million new jobs each year, India’s dream of a demographic dividend could easily turn into a nightmare! Listen to Sridha Krishna Senior Scholar at Takshashila Institution as we tackle the role of cities in surmounting this problem. From skills gap to career impact bonds what do we need to do? </p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
